unpackaged/main/default/objects/OEM_Program__c/OEM_Program__c.object-meta.xml
<CustomObject>
    <description>NCM Program and Projects (OEM, Dealer, Management Groups, etc)</description>
    <label>NCM Program</label>
    <nameField>
        <label>Program</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCM Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>