unpackaged/main/default/objects/OEM_Program__c/fields/BENCHMARK_OTHER_COMPARISONS__c.field-meta.xml
<CustomField>
    <fullName>BENCHMARK_OTHER_COMPARISONS__c</fullName>
    <label>BENCHMARK &amp; OTHER COMPARISONS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>