unpackaged/main/default/objects/OEM_Program__c/fields/BILLING_FREQUENCY__c.field-meta.xml
<CustomField>
    <fullName>BILLING_FREQUENCY__c</fullName>
    <label>BILLING FREQUENCY</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>