unpackaged/main/default/objects/OEM_Program__c/fields/BILLING_NOTES__c.field-meta.xml
<CustomField>
    <fullName>BILLING_NOTES__c</fullName>
    <label>BILLING NOTES</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>