unpackaged/main/default/objects/OEM_Program__c/fields/BILLING_POLICY__c.field-meta.xml
<CustomField>
    <fullName>BILLING_POLICY__c</fullName>
    <label>BILLING POLICY</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>