unpackaged/main/default/objects/OEM_Program__c/fields/BILLING_PROCESS__c.field-meta.xml
<CustomField>
    <fullName>BILLING_PROCESS__c</fullName>
    <label>BILLING PROCESS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>