unpackaged/main/default/objects/OEM_Program__c/fields/Commission_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid_Date__c</fullName>
    <label>Commission Paid Date</label>
    <type>Date</type>
</CustomField>