unpackaged/main/default/objects/OEM_Program__c/fields/COMMISSION_PERCENTAGE__c.field-meta.xml
<CustomField>
    <fullName>COMMISSION_PERCENTAGE__c</fullName>
    <label>COMMISSION PERCENTAGE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>