unpackaged/main/default/objects/OEM_Program__c/fields/COMPOSITE_PTA__c.field-meta.xml
<CustomField>
    <fullName>COMPOSITE_PTA__c</fullName>
    <label>COMPOSITE &amp; PTA</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>