unpackaged/main/default/objects/OEM_Program__c/fields/CONTENT__c.field-meta.xml
<CustomField>
    <fullName>CONTENT__c</fullName>
    <label>CONTENT</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>