unpackaged/main/default/objects/OEM_Program__c/fields/CONTRACT__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT__c</fullName>
    <label>CONTRACT #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>