unpackaged/main/default/objects/OEM_Program__c/fields/DATA_COLLECTION__c.field-meta.xml
<CustomField>
    <fullName>DATA_COLLECTION__c</fullName>
    <label>DATA COLLECTION</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>