unpackaged/main/default/objects/OEM_Program__c/fields/DELIVERABLES__c.field-meta.xml
<CustomField>
    <fullName>DELIVERABLES__c</fullName>
    <label>DELIVERABLES</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>