unpackaged/main/default/objects/OEM_Program__c/fields/Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Descriptor__c</fullName>
    <inlineHelpText>This is a short description of the NCM Program.</inlineHelpText>
    <label>Descriptor</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>