unpackaged/main/default/objects/OEM_Program__c/fields/FINANCIAL_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>FINANCIAL_CONTACT__c</fullName>
    <label>FINANCIAL CONTACT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>