unpackaged/main/default/objects/OEM_Program__c/fields/INVOICE_DELIVERY__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_DELIVERY__c</fullName>
    <label>INVOICE DELIVERY</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>