unpackaged/main/default/objects/OEM_Program__c/fields/MARKETING__c.field-meta.xml
<CustomField>
    <fullName>MARKETING__c</fullName>
    <label>MARKETING</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>