unpackaged/main/default/objects/OEM_Program__c/fields/MILESTONES_TOUCHPOINTS__c.field-meta.xml
<CustomField>
    <fullName>MILESTONES_TOUCHPOINTS__c</fullName>
    <label>MILESTONES &amp; TOUCHPOINTS</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>