unpackaged/main/default/objects/OEM_Program__c/fields/NCMProgramID_18__c.field-meta.xml
<CustomField>
    <fullName>NCMProgramID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMProgramID (18)</label>
    <type>Text</type>
</CustomField>