unpackaged/main/default/objects/OEM_Program__c/fields/OTHER_NOTES__c.field-meta.xml
<CustomField>
    <fullName>OTHER_NOTES__c</fullName>
    <label>OTHER NOTES</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>