unpackaged/main/default/objects/OEM_Program__c/fields/PO_RELEASE__c.field-meta.xml
<CustomField>
    <fullName>PO_RELEASE__c</fullName>
    <label>PO#/RELEASE #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>