unpackaged/main/default/objects/OEM_Program__c/fields/PRICING__c.field-meta.xml
<CustomField>
    <fullName>PRICING__c</fullName>
    <label>PRICING</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>