unpackaged/main/default/objects/OEM_Program__c/fields/Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date__c</fullName>
    <label>Program End Date</label>
    <type>Date</type>
</CustomField>