unpackaged/main/default/objects/OEM_Program__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCM Programs</relationshipLabel>
    <relationshipName>NCM_Programs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>