unpackaged/main/default/objects/OEM_Program__c/fields/Projected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Projected_Revenue__c</fullName>
    <label>Projected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>