unpackaged/main/default/objects/OEM_Program__c/fields/ROLES_RESPONSIBILITIES__c.field-meta.xml
<CustomField>
    <fullName>ROLES_RESPONSIBILITIES__c</fullName>
    <label>ROLES &amp; RESPONSIBILITIES</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>