unpackaged/main/default/objects/OEM_Program__c/listViews/Retail_Solutions_Cancelled.listView-meta.xml
<ListView>
    <fullName>Retail_Solutions_Cancelled</fullName>
    <columns>NAME</columns>
    <columns>Project_Manager__c</columns>
    <columns>Project_Coordinator__c</columns>
    <columns>Descriptor__c</columns>
    <filterScope>Mine</filterScope>
    <label>Retail Solutions - Cancelled</label>
</ListView>